--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,12 +5,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "dotenv -e .env.test nodemon src/server.ts",
+    "prisma:reset": "prisma migrate reset --force",
+    "prisma:migrate": "prisma migrate dev",
+    "test": "jest --i --coverage",
+    "test:unit": "clear && jest --verbose --i --coverage --testPathPattern=tests/unit",
+    "test:integration": "clear && jest --i --verbose --coverage --testPathPattern=tests/integration"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
@@ -22,19 +28,19 @@
     "eslint": "^7.32.0",
     "jest": "^28.0.3",
     "nodemon": "^2.0.12",
-    "prisma": "^3.13.0",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.1",
+    "prisma": "^4.1.1",
     "react-player": "^2.10.0"
   }
 }
